# playlistparser

./: .coveragerc  .gitignore  CHANGES.md  CODE_OF_CONDUCT.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: renovate.json
.github/workflows/: main.yml
data/: PlaylistConverterTest-wo-year.txt  PlaylistConverterTest.txt  TestList100tracks.txt  TestList5Artists.txt  broken-enginedj-v21.csv  broken-serato-v25.csv  engine_1.csv  enginedj-v21.csv  playlistreader_bug_191.txt  rekordbox-v6-missing-meta.txt  rekordbox-v6.txt  rekordbox_1.txt  rekordbox_2.txt  serato-v25.csv  serato_1.csv  toobig.txt  traktor-missing-playtime.nml  traktor-v35.nml  traktor_1.nml  traktor_2.nml  traktor_3.nml  virtualdj-missing-bpm.csv  virtualdj-v2021.csv
docs/plans/: refactor-playlist-public-api.md
playlistparser/: __init__.py  exceptions.py  track.py  utils.py
playlistparser/parsers/: __init__.py  engine.py  rekordbox.py  serato.py  traktor.py  virtualdj.py
src/playlistparser/: __init__.py  track.py  utils.py
src/playlistparser/parsers/: engine.py  rekordbox.py  serato.py  traktor.py  virtualdj.py
tests/: test_main.py  test_parsers.py  test_playlistparser.py  test_require_fp.py  test_required.py  test_track.py  test_track_class.py  test_unicode.py
