[project]
name = "playlistparser"
description = "Tool for parsing DJ software playlists"
version = "3.0.0-beta.10"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [{ name = "Ville Säävuori", email = "ville@unessa.net" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Changelog = "https://github.com/slipmatio/playlistparser/blob/main/CHANGES.md"
Bluesky = "https://bsky.app/profile/uninen.net"
Source = "https://github.com/slipmatio/playlistparser"
Twitter = "https://twitter.com/uninen"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.14.10"]
