[project]
name = "playlistparser"
description = "Tool for parsing DJ software playlists"
version = "4.0.0"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.14"
authors = [{ name = "Ville Säävuori", email = "ville@unessa.net" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["lxml>=6.1.1"]

[project.urls]
Changelog = "https://github.com/slipmatio/playlistparser/blob/main/CHANGES.md"
Bluesky = "https://bsky.app/profile/uninen.net"
Source = "https://github.com/slipmatio/playlistparser"
Twitter = "https://twitter.com/uninen"

[build-system]
requires = ["uv_build>=0.11.16"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv]
package = false
exclude-newer = "1 day"

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-cov>=7.1.0", "ruff>=0.15.14", "ty>=0.0.39"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py314"
exclude = [
    ".direnv",
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "*/migrations",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "E402", "PLC0415"]
ignore = ["SIM108"]
fixable = ["ALL"]
unfixable = ["F401"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "I001"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
single-line-exclusions = ["os", "json"]
known-first-party = ["playlistparser"]

[tool.ruff.lint.pylint]
max-args = 8
max-statements = 80

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.rumdl]
line-length = 100
disable = ["MD033", "MD041"]
exclude = [".git", ".venv"]
respect-gitignore = true

[tool.rumdl.MD013]
reflow = true
reflow-mode = "default"
