[metadata]
name = playlistparser
version = attr: playlistparser.__version__
author = Ville Säävuori
author_email = ville@unessa.net
summary = DJ playlist parsing tool
description-file = README.md
long-description-content-type = text/markdown
requires-python = >=3.8
license = AGPL
url = https://github.com/slipmatio/playlistparser
project_urls =
    Twitter = https://twitter.com/uninen
    Source = https://github.com/slipmatio/playlistparser
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    playlistparser
package_dir =
    = src

[wheel]
universal = 1
